task502: caption layout bug fix

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -21,16 +21,20 @@ form
 	margin-block-end: 0
 
 strong.title
-	display: flex
+	display: block
 	font-size: 1.6em
 	font-weight: normal
 	margin: 0 0 $r * 3
+	white-space: pre-wrap
+	overflow-wrap: break-word
 
 strong.subtitle
-	display: flex
+	display: block
 	font-size: 1.2em
 	font-weight: normal
 	margin: 0 0 $r
+	white-space: pre-wrap
+	overflow-wrap: break-word
 
 a.link,
 span.link
